# prism

./: Cargo.toml  README.md
examples/: grid.rs  packed.rs  polygon.rs  prism.rs  simple.rs  solver.rs
src/: base.rs  ext.rs  lib.rs  polygon.rs  shape.rs  solver.rs  utils.rs
