[package]
name = "prism"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["math", "sampling", "geometry", "noise", "tesselation"]
categories = [
    "mathematics",
    "graphics",
    "simulation",
    "science",
    "visualization",
]
repository = "https://github.com/entropylost/prism"
description = "A library for generating points in patterns within volumes"
readme = "README.md"

[dependencies]
nalgebra = "0.33.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = { version = "1.10.0", optional = true }
smallvec = "1.13.2"

[dev-dependencies]
macroquad = "0.4.13"
